syntax = "proto3";
package gedit.store;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.store.profile.grpc";
option java_outer_classname = "StoreProfileProto";
option objc_class_prefix = "STPRF";

import "gedit/common.proto";

// The store service definition.
service StoreProfileApi {
    rpc Create (CreateStoreRequest) returns (CreateStoreResponse) {
    }

    rpc Update (UpdateStoreRequest) returns (UpdateStoreResponse) {
    }

    rpc Get (GetStoreRequest) returns (StoreProfileResponse) {
    }

    rpc List (ListStoreRequest) returns (stream StoreProfileResponse) {
    }

    rpc Ban (BanStoreRequest) returns (BanStoreResponse) {
    }

}

message CreateStoreRequest {
    //创建店铺需提供名称、地理位置、行政区编号、详细地址，其他内容通过单项修改完善
    string name = 1; //unique
    Location location = 4;
    string districtUuid = 9;
    string detailAddress = 10;
    string introducerUuid = 12;
}

message CreateStoreResponse {
    Status status = 999;
    string uuid = 1; //store uuid
    string name = 2;
    string ownerUuid = 3;
}


message UpdateStoreRequest {
    string uuid = 1; //store uuid
    //只支持单项修改
    oneof property {
        string name = 2;
        string logo = 3;
        Location location = 4;
        string type = 6;
        string desc = 7;//详细描述
        int32 pointsRate = 8; //积分奖励率
        string districtUuid = 9;
        string detailAddress = 10;
        ListURL images = 11;
        ListTel tels = 12;
        WorkingTime workingTime = 13;
        bool active = 59;
    }

}

message WorkingTime{
    int64 start = 1;
    int64 end = 2;
}
message ListTel{
    repeated string urls = 11;
}
message ListURL{
    repeated string urls = 11;
}
message UpdateStoreResponse {
    Status status = 999;
    string uuid = 1; //store uuid
    int64 lastUpdated = 2; //store update timestamp
}


message GetStoreRequest {
    string uuid = 1; //store uuid
    int64 lastUpdated = 2;
}


message ListStoreRequest {
    string type = 3;
    int32 from = 100;
    int32 size = 101;
}

message FindByNameRequest {
    string name = 1;
    int32 from = 2;
    int32 size = 3;
}

message StoreProfileResponse {
    Status status = 999;
    StoreProfile storeProfile = 1;
}

message StoreProfile {
    string uuid = 1; //store uuid
    string name = 2;
    string logo = 3;
    Location location = 4;
    string type = 6;
    string desc = 7;
    int32 pointsRate = 8; //积分奖励率
    string districtUuid = 9;
    string detailAddress = 10;
    repeated string images = 11;
    string introducerUuid = 12;
    bool active = 59;

    int32 from = 100;

}
message BanStoreRequest {
    string uuid = 1; //store uuid
    bool active = 2;
}

message BanStoreResponse {
    Status status = 999;
    string uuid = 1; //store uuid
    bool active = 2;
}